syntax = "proto3";

option csharp_namespace = "WC.Service.Authentication.API.gRPC.Services";

package authentication;

service GreeterAuthentication {
  rpc GetLoginResponse (AuthenticationLoginRequest) returns (AuthenticationLoginResponse);
}

message AuthenticationLoginRequest {
  string email = 1;
  string password = 2;
}

message AuthenticationLoginResponse {
  string tokenType = 1;
  string accessToken = 2;
  int32 expiresIn = 3;
  string refreshToken = 4;
}
